fix vertical overflow

--- a/src/client/components/global.scss
+++ b/src/client/components/global.scss
@@ -25,6 +25,7 @@ a {
 }
 
 .map {
+  display: block;
   width: 100%;
   height: 100%;
 }
